login modal closes, and other things.

--- a/assets/jade/bootstrap.jade
+++ b/assets/jade/bootstrap.jade
@@ -10,7 +10,7 @@ block body
           span.icon-bar
         a.brand(href='#')
           block projectname
-            span NotableMind
+            span FamilyFound
         .nav-collapse.collapse
           ul.nav
             block navitems
