--- a/assets/styl/index.styl
+++ b/assets/styl/index.styl
@@ -7,6 +7,35 @@ body {
 .modal {
   margin: 0;
 }
+
+.rootPerson {
+  float: left;
+}
+
+.rightPane {
+  float: left;
+}
+
+.todo:hover {
+  background-color: #eee;
+}
+
+.todo {
+  color: #555;
+  padding: 5px 10px;
+  border-radius: 10px;
+  
+  span {
+    margin-left: 15px;
+  }
+  input {
+    margin-top: -4px;
+  }
+  span.type {
+    font-style: italic;
+    color: black;
+  }
+}
   
 #dialog.login-modal {
   border-radius: 10px;
