--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -7,6 +7,7 @@ block bodytitle
   span They are waiting.
 
 block container
+    base(href='/')
     nav.nav.nav-pills.sub-nav(data-ng-controller='NavController')
       li(ng-repeat='item in subNav', ng-class='{active: activeItem(item)}')
         a(href='{{item.path}}') {{ item.title }}
@@ -24,7 +25,8 @@ block container
           .alert(ng-repeat='alert in alerts', data-alert='alert')
       script(id='personView.html', type='text/ng-template')
         h1 {{ rootPerson.display.name || "Loading" }} Tree
-        a.pull-right(href='https://familysearch.org/tree/#view=ancestor&person={{rootPerson.id}}', target='_blank') View on FamilySearch.org
+        a(href='https://familysearch.org/tree/#view=ancestor&person={{rootPerson.id}}', target='_blank') View on FamilySearch.org
+        div.pull-right(data-breadcrumb="history", data-config="bcConfig")
         .tree(data-fan="rootPerson", data-config='fanConfig')
           // .go-back(ng-click='goBack()', ng-show='rootPerson.mainChild')
             .mid &laquo;
