awesome history + person sidebar

--- a/assets/jade/bootstrap.jade
+++ b/assets/jade/bootstrap.jade
@@ -1,7 +1,7 @@
 extends base
 
 block body
-  div.navbar.navbar-inverse.navbar-fixed-top
+  div.navbar.navbar-inverse
     .navbar-inner
       .container
         a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
