--- a/assets/jade/person.jade
+++ b/assets/jade/person.jade
@@ -9,7 +9,7 @@
       div(person-vitals="person.mother")
   .families
    .family(ng-repeat="(spouseId, family) in person.families")
-     div(ng-repeat="person in family track by person.id", ng-show="person", class="person {{ $index === 0 ? 'spouse' : 'child' }} {{ person.display.gender === 'Female' ? 'female' : 'male' }}")
+     div(ng-repeat="person in family | filter:notNull", ng-show="person", class="person {{ $index === 0 ? 'spouse' : 'child' }} {{ person.display.gender === 'Female' ? 'female' : 'male' }}")
        span.title {{ $index === 0 ? (person.display.gender === 'Female' ? 'Wife' : 'Husband') : (person.display.gender === 'Female' ? 'Daughter' : 'Son') }}
        div(person-vitals="person")
        div(ng-if="$index > 0", class="{{ childClass(person.familyIds) }} num-children") {{ numChildren(person.familyIds) }}
