--- a/assets/styl/index.styl
+++ b/assets/styl/index.styl
@@ -60,6 +60,10 @@ body {
 }
 
 .person-vitals {
+  .focus-me {
+    cursor: pointer;
+    padding-right: 5px;
+  }
   .head {
 
     .status, .status.inactive {
@@ -100,6 +104,21 @@ body {
 .person-details {
   margin-top: 10px;
 
+  .loading-families {
+    padding: 6px 10px;
+    background-color: #dfd;
+    margin-bottom: 5px;
+
+    .icon-refresh {
+      margin-right: 3px;
+    }
+  }
+
+  .parents {
+    border-left: 28px solid #eee;
+    padding-left: 5px;
+  }
+
   .num-children {
     position: absolute;
     bottom: 0;
@@ -139,10 +158,16 @@ body {
     padding-bottom: 5px;
     background-color: white;
     cursor: default;
+    min-height: 38px;
 
     .head {
       font-size: 12px;
       font-weight: bold;
+    }
+
+    .noname {
+      font-style: italic;
+      color: black;
     }
 
     > .title {
@@ -156,6 +181,9 @@ body {
       border-top-right-radius: 4px;
       border-bottom-left-radius: 5px;
     }
+  }
+  .child {
+    margin-left: 7px;
   }
   .spouse {
     border-left: 2px solid;
@@ -229,6 +257,7 @@ body {
 }
 
 .person {
+  &.focused,
   &:hover {
     fill: #ccc;
   }
