better styling, person-details bugfixes + status dropdown

--- a/assets/jade/bootstrap.jade
+++ b/assets/jade/bootstrap.jade
@@ -22,7 +22,7 @@ block body
                     if item.name
                       span= item.name
             block extra-nav
-  .container
+  .main-container
     block container
       h1
         block bodytitle
