--- a/assets/styl/index.styl
+++ b/assets/styl/index.styl
@@ -37,8 +37,15 @@ body {
       .right-side {
         width: 400px;
         overflow: auto;
+        padding: 10px 20px;
       }
     }
+  }
+
+  #pages > .todos-view {
+    display: block;
+    overflow: auto;
+    padding: 10px 30px;
   }
 }
 @media (max-height: 499px) {
