--- a/assets/styl/index.styl
+++ b/assets/styl/index.styl
@@ -133,6 +133,10 @@ body {
       background-color: rgb(115, 255, 176);
     }
 
+    .status.hard {
+      background-color: rgb(115, 255, 176);
+    }
+
     .status {
       display: inline-block;
       width: 15px;
