--- a/assets/styl/index.styl
+++ b/assets/styl/index.styl
@@ -20,6 +20,11 @@ body {
     overflow: hidden;
   }
 
+  #pages > .related-view {
+    display: block;
+    padding: 50px;
+  }
+
   .person-view {
     flex-direction: column;
     
